# img2grayscale

./: CMakeLists.txt  README.md  main.cpp
